--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.2",
     "axios": "^1.8.4",
     "next": "15.2.4",
     "react": "^19.0.0",
@@ -36,6 +37,7 @@
     "lint-staged": "^15.5.0",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.5.3",
+    "sass": "^1.86.0",
     "stylelint": "^16.17.0",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^37.0.0",
