--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.23.0",
     "@ant-design/nextjs-registry": "^1.0.2",
     "@opentelemetry/auto-instrumentations-node": "^0.62.0",
     "@opentelemetry/resources": "^2.0.1",
